Modernize some collection code