@@ -53,13 +53,7 @@ public final class SCMUri {
     }
 
     static {
-        Map<String, Integer> ports = new HashMap<>();
-        ports.put("ftp", 21);
-        ports.put("ssh", 22);
-        ports.put("telnet", 22);
-        ports.put("http", 80);
-        ports.put("https", 443);
-        commonDefaultPorts = Collections.unmodifiableMap(ports);
+        commonDefaultPorts = Map.of("ftp", 21, "ssh", 22, "telnet", 22, "http", 80, "https", 443);
     }
 
     /**
